package com.wzy.visitor;

public abstract class Action {
    abstract void evaluateMan();
    abstract void evaluateWoman();
}
