package com.wzy.visitor;

public abstract class Singer {
    abstract void accept(Action action);
}
